Header contact, augmentation du contraste text-shadow des texts sur des images + corrections de bugs CSS

--- a/css/styleCommerce.css
+++ b/css/styleCommerce.css
@@ -38,8 +38,11 @@ ci dessous, css spécifique à la page commercants
 	background : url(./../images/banner/banner1.jpg) center;
 	max-width: 1200px;
 	margin: auto;
-	text-shadow: 0px 0px 5px rgba(15, 50, 15, 0.9);	/* generateur : https://css3gen.com/text-shadow/ */
-  }
+	text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.9),  0px 0px 3px rgba(0, 0, 0, 1),  0px 0px 1px rgba(0, 0, 0, 1);	/* generateur : https://css3gen.com/text-shadow/ */
+}
+
+/*#headerCommerce h1 {background-color: rgba(15,32,15,0.15)}*/
+
 .listeCommerces li a, #headerCommerce h1 {
 	color : white;
   	/*text-shadow: 0px 0px 5px rgba(15, 50, 15, 0.9);	/* generateur : https://css3gen.com/text-shadow/ */
